# IOSet

./: CMakeLists.txt  README.md  generator.hpp  ioset.hpp  main.cpp  op.hpp  operators.hpp  sort.hpp  staticlist.hpp  util.hpp
